Package: aroma.light
====================

Version: 1.31.5 [2013-09-23]
o ROBUSTNESS: Now properly declaring all S3 methods in the NAMESPACE file.
o CLEANUP: Now only using 'Authors@R' in DESCRIPTION, which is possible
  since R (>= 2.14.0).  Hence the new requirement on the version of R.
o Bumped up package dependencies.


Version: 1.31.4 [2013-09-10]
o CLEANUP: Now package explicitly imports what it needs from matrixStats.
o Bumped up package dependencies.


Version: 1.31.3 [2013-05-25]
o SPEEDUP: Removed all remaining gc() calls, which were in
  normalizeQuantileSpline().
o SPEEDUP: Replaced all rm() calls with NULL assignments.
o Updated the package dependencies.


Version: 1.31.2 [2013-05-20]
o Same updates as in v1.30.2.


Version: 1.31.1 [2011-04-18]
o Same updates as in v1.30.1.


Version: 1.31.0 [2013-04-03]
o The version number was bumped for the Bioc devel version.


Version: 1.30.2 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.


Version: 1.30.1 [2013-04-18]
o Now backtransformPrincipalCurve() preserves dimension names.
o BUG FIX: backtransformPrincipalCurve() gave an error if the
  pricipal curve was fitted using data with missing values.
o BUG FIX: fitPrincipalCurve() would not preserve dimension
  names if data contain missing values.


Version: 1.30.0 [2012-04-03]
o The version number was bumped for the Bioconductor release version,
  which now is Bioc v2.12 for R (>= 3.0.0).


Version: 1.29.0 [2012-10-01]
o The version number was bumped for the Bioc devel version.


Version: 1.28.0 [2012-10-01]
o The version number was bumped for the Bioconductor release version,
  which now is Bioc v2.11 for R (>= 2.15.1).


Version: 1.27.1 [2012-09-12]
o ROBUSTNESS: Replaced an .Internal(psort(...)) call  in
  medianPolish() with a call to matrixStats:::.psortKM().


Version: 1.27.0 [2012-08-30]
o CLEANUP: Removed weightedMedian(), which has been moved
  to the matrixStats package.